freest/test/prog/Invalid/SessionTypes/WaitPatOnClose/WaitPatOnClose.fst
module WaitPatOnClose where

foo : Close -> ()
foo Wait = ()